# SuperPaste

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  focus.rs  lib.rs  main.rs  models.rs  tray.rs
src/components/: ClipboardCard.tsx  SearchBar.tsx  SettingsPanel.tsx
src/hooks/: useClipboard.ts  useSettings.ts
src/types/: index.ts
